--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -1,5 +1,3 @@
-;
-
 :root {
     --font-family: "Inter", sans-serif;
 }
@@ -11,7 +9,6 @@
     padding: 56px 72px;
     gap: 24px;
     color: rgba(41, 41, 41, 1);
-
 }
 
 .services h1 {
@@ -41,7 +38,6 @@
     flex-flow: column;
     padding: 0px 0px 24px 0px;
     border-radius: 8px;
-    gap: 16px;
     box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.1);
 
 }
@@ -82,8 +78,7 @@
     display: flex;
     flex-flow: column;
     width: 100%;
-
-    padding: 0px 16px;
+    padding: 16px 16px;
     gap: 16px;
 }
 
@@ -114,5 +109,25 @@
 
     .service-row-2 .service-card{
         width: 420px;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .services {
+        width: 100vw;
+        padding: 0 1rem;
+        margin: 3.5rem 0;
+    }
+
+    .service-row-1, .service-row-2 {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .service-card {
+        width: 100% !important;
+        height: fit-content !important;
+        padding: 0;
+        margin: 0;
     }
 }
